# pandemic

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build.sh  cities.json  index.html
proto/: vector_tile.proto
src/: city.rs  color.rs  disease.rs  fileformat.proto  lib.rs  main.rs  osmformat.proto  player.rs  renderer.rs  tile.rs  tilesource.rs  util.rs
