[package]
name = "pandemic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rand = "*"
colored = "2"
# pancurses = "0.17.0"
# miniquad = "0.3.15"
# macroquad = "0.3"
bevy = "0.9"
