[package]
name = "pandemic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json", "gzip"] }
rand = "*"
colored = "2"
clap = { version = "4.1", features = ["derive"] }
pancurses = "0.17.0"
# miniquad = "0.3.15"
# macroquad = "0.3"
# bevy = "0.9"
osmpbf = "0.2"
protobuf = { version = "3.2", features = ["with-bytes"] }
prost = "0.11"
osmpbfreader = "0.15.2"


# Enable max optimizations for dependencies, but not for our code:
# [profile.dev.package."*"]
# opt-level = 3

[build-dependencies]
prost-build = { version = "0.11" }
