[package]
name = "pandemic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = "0.9"
# macroquad = "0.3"
# miniquad = "0.3.15"
braille = "1.0"
clap = { version = "4.1", features = ["derive"] }
colored = "2"
drawille = "0.3.0"
image = "0.24"
imageproc = "*"
log = "0.4"
lru = "0.9"
map-macro = "0.2"
pancurses = "0.17.0"
pretty_env_logger = "0.3"
prost = "0.11"
rand = "*"
reqwest = { version = "0.11", features = ["blocking", "json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplify-polyline = "0.4.0"
thiserror = "1.0"


# Enable max optimizations for dependencies, but not for our code:
# [profile.dev.package."*"]
# opt-level = 3

[build-dependencies]
prost-build = { version = "0.11" }
